--- a/Spring-Security/SpringSecurityPrep/src/main/resources/application.properties
+++ b/Spring-Security/SpringSecurityPrep/src/main/resources/application.properties
@@ -8,3 +8,5 @@ spring.datasource.password=root
 #ORM s/w specific properties
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
