--- a/Spring-Security/SpringSecurityPrep/src/main/resources/application.properties
+++ b/Spring-Security/SpringSecurityPrep/src/main/resources/application.properties
@@ -9,4 +9,4 @@ spring.datasource.password=root
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 
-logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+#logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
